[tool.poetry]
package-mode = false
name = "mongobackup-s3"
description = "Python Script to Backup MongoDB Database into S3 Object Storage"
authors = ["Roman Poltorabatko <r.m.poltorabatko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.117"
aioboto3 = "^13.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.poetry.scripts]
app = "mongobackup_s3.main:main"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true